<resources>
    <string name="app_name">NeverNote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="action_switch">Switch</string>
    <string name="add_fab">add_fab</string>
    <string name="search_notes">Search Notes</string>
    <string name="search_tasks">Search Tasks</string>
    <string name="items">%s items</string>
    <string name="see_folders">see folders</string>
    <string name="see_notes">see notes</string>
    <string name="folder_title">%s : %s notes</string>
    <string name="add_folder">Add folder</string>
    <string name="folder_name">Folder name</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="check">Check</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_link">Add link</string>
    <string name="link">Link</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="add_to_folder">Add to folder</string>
    <string name="share_note">Share note</string>
    <string name="add_cloth">Add cloth</string>
    <string name="reminder">Reminder</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="place_on_home_screen">Place on Home screen</string>
    <string name="edit">Edit</string>
    <string name="completed_task">Completed task %s</string>
    <string name="note_channel_id">note_channel</string>
    <string name="task_channel_id">task_channel</string>
    <string name="note_channel_name">Note</string>
    <string name="task_channel_name">Task</string>
    <string name="add_content_of_task">Add content of task</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="done">Done</string>
    <string name="record_timer_text">00:00</string>
    <string name="toggle_record">toggle record</string>
    <string name="finish">Finish</string>
    <string name="m4a">m4a</string>
    <string name="mp3">mp3</string>
    <string name="an_error_occurred">And error occurred</string>
    <string name="unknown_error_occurred">unknown error occurred</string>
    <string name="recording_saved_successfully">recording saved successfully</string>
    <string name="record_title">record title</string>
    <string name="audio">audio</string>
    <string name="modify_text">Modify text</string>
    <string name="add_note_background">Add note Background</string>
    <string name="add_color">Add Color</string>
    <string name="add_audio">Add audio</string>
    <string name="add_shape">Add shape</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="nothing_to_show_there">Nothing to show there !</string>
    <string name="have_background">have background</string>
    <string name="logo">logo</string>
    <string name="convert_to_bullet_list">convert to bullet list</string>
</resources>