<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:enabled="true"
        android:icon="@drawable/ic_share"
        android:title="@string/share_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cloth"
        android:enabled="true"
        android:icon="@drawable/ic_clothes"
        android:title="@string/add_cloth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:enabled="true"
        android:title="@string/edit" />

    <item
        android:id="@+id/action_reminder"
        android:enabled="true"
        android:title="@string/reminder" />


<!--    <item
        android:id="@+id/action_to_screen"
        android:enabled="true"
        android:title="@string/place_on_home_screen" />-->

    <item
        android:id="@+id/action_delete"
        android:enabled="true"
        android:title="@string/delete" />

</menu>