<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_delete_note"
        android:enabled="true"
        android:icon="@drawable/ic_full_trash"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_folder_note"
        android:enabled="true"
        android:icon="@drawable/ic_folder"
        android:title="@string/add_to_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all_note"
        android:enabled="true"
        android:icon="@drawable/ic_check_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

</menu>