<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/undo_action"
      android:title="@string/undo"
      android:enabled="true"
      android:icon="@drawable/ic_undo_disable"
      app:showAsAction="ifRoom"
      />
    <item
        android:id="@+id/redo_action"
        android:title="@string/redo"
        android:enabled="true"
        android:icon="@drawable/ic_redo_disable"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/check_action"
        android:title="@string/check"
        android:enabled="true"
        android:icon="@drawable/ic_checkmark_disable"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
</menu>