<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/add_folder_card"
    app:cardCornerRadius="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        style="@style/Theme.NeverNote.Background">

        <TextView
            android:id="@+id/title_add_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/add_new_folder"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/title_add_folder"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_add_folder"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/folder_title"/>

        <EditText
            android:id="@+id/add_folder_edit_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/title_add_folder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/folder_name"
            android:background="@drawable/add_edittext_bg"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:autofillHints="@string/folder_name"
            android:inputType="text" />

            <TextView
                android:id="@+id/button_add_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/add_folder"
                app:layout_constraintTop_toBottomOf="@id/add_folder_edit_text"
                android:layout_marginTop="50dp"
                style="@style/Theme.NeverNote.Button"
                />

        <TextView
            android:id="@+id/add_folder_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/button_add_folder"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/add_folder_edit_text"
            android:layout_marginTop="50dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>