<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <EditText
        android:id="@+id/edit_text_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"

        android:hint="@string/add_content_of_task"
        android:autofillHints="@string/add_content_of_task"
        android:background="@null"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/task_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_reminder"
        app:layout_constraintTop_toBottomOf="@id/edit_text_add_task"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_alarm_24"
        android:background="@drawable/button_search_bg_light"/>

    <TextView
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>