<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.NeverNote.Background">

    <TextView
        android:id="@+id/record_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/record_timer_text"/>

    <com.visualizer.amplitude.AudioRecordView
        android:id="@+id/audioRecordView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:chunkAlignTo="bottom"
        app:chunkRoundedCorners="true"
        app:chunkSoftTransition="true"
        app:chunkColor="@color/primaryColor"
        app:chunkSpace="1dp"
        app:chunkWidth="2dp"
        app:chunkMaxHeight="48dp"
        app:chunkMinHeight="2dp"
        app:direction="leftToRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_duration"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"/>


    <LinearLayout
        android:id="@+id/record_actions"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioRecordView"
        android:layout_marginVertical="30dp">

        <TextView
            android:id="@+id/record_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:drawableTopCompat="@drawable/ic_cancel"
            android:layout_marginHorizontal="40dp"/>

        <ImageButton
            android:id="@+id/record_toggle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/toggle_record_shape"
            android:src="@drawable/ic_microphone_shape"
            android:contentDescription="@string/toggle_record" />

        <TextView
            android:id="@+id/record_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            app:drawableTopCompat="@drawable/baseline_check_24"
            android:layout_marginHorizontal="40dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>