<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:contentPadding="15dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/search_button_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/play_toggle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/play_card_toggle"
            android:src="@drawable/ic_round_play_arrow_24"
            android:contentDescription="@string/toggle_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/record_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/play_toggle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/record_text_color"
            android:text="@string/record_title"
            android:layout_marginStart="12dp" />

        <LinearLayout
            android:id="@+id/visualizer_box"
            app:layout_constraintStart_toEndOf="@id/play_toggle"
            app:layout_constraintEnd_toStartOf="@id/record_duration"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:visibility="gone">

            <com.chibde.visualizer.LineBarVisualizer
                android:id="@+id/visualizer"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/record_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/record_text_color"
            android:text="@string/record_timer_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
