<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/app_padding"
            android:paddingStart="@dimen/app_padding"
            android:paddingEnd="@dimen/app_padding"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                android:theme="@style/Theme.NeverNote.ActionBar"
                app:popupTheme="@style/Theme.NeverNote.ActionBar.PopUp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:id="@+id/actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/my_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/action_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    style="@style/Theme.NeverNote.actions"
                    android:layout_marginEnd= "@dimen/actions_space"
                    app:drawableEndCompat="@drawable/ic_expand_arrow" />

                <TextView
                    android:id="@+id/action_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.NeverNote.actions"
                    android:text="@string/tasks"/>

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/view_pager_space"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actions" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/add_fab"
                android:src="@drawable/ic_plus_math"
                android:elevation="4dp"
                android:layout_margin="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/add_folder_bottom_sheet"
            layout="@layout/add_folder_bottom_sheet" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>